# docs/swagger.json
@@ -323,6 +323,14 @@
                         }
                     },
                     {
+                        "description": "game_level_id",
+                        "name": "game_level_id",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "description": "img_url",
                         "name": "img_url",
                         "in": "body",
