# models/check.go
@@ -6,13 +6,14 @@ import (
 )
 
 type Check struct {
-	UserId     int    `gorm:"primary_key;type:int(12);not null" form:"user_id" json:"user_id" valid:"Required;Range(1, 1000000000)"`
-	GameId     string `gorm:"type:varchar(20);not null;default:''" form:"game_id" json:"game_id"  valid:"Required;MaxSize(20)"`
-	GameServer int    `gorm:"type:int(5);not null;default:0" form:"game_server" json:"game_server" valid:"Required;Range(1, 512)"`
-	GamePos    int    `gorm:"type:int(5);not null;default:0" form:"game_pos" json:"game_pos" valid:"Required;Range(1, 512)"`
-	GameLevel  string `gorm:"type:varchar(20);not null;default:''" form:"game_level" json:"game_level" valid:"Required;MaxSize(20)"`
-	ImgUrl     string `gorm:"type:varchar(100);not null;default:''" form:"img_url" json:"img_url"  valid:"Required;MaxSize(500)"`
-	RegTime    int    `json:"reg_time" gorm:"type:int(12);not null;default:0"`
+	UserId      int    `gorm:"primary_key;type:int(12);not null" form:"user_id" json:"user_id" valid:"Required;Range(1, 1000000000)"`
+	GameId      string `gorm:"type:varchar(20);not null;default:''" form:"game_id" json:"game_id"  valid:"Required;MaxSize(20)"`
+	GameServer  int    `gorm:"type:int(10);not null;default:0" form:"game_server" json:"game_server" valid:"Required;Range(1, 10000)"`
+	GamePos     int    `gorm:"type:int(10);not null;default:0" form:"game_pos" json:"game_pos" valid:"Required;Range(1, 10000)"`
+	GameLevel   string `gorm:"type:varchar(20);not null;default:''" form:"game_level" json:"game_level" valid:"Required;MaxSize(20)"`
+	GameLevelId int    `gorm:"type:int(10);not null;default:0" form:"game_level_id" json:"game_level_id" valid:"Required;Range(1, 1000000)"`
+	ImgUrl      string `gorm:"type:varchar(100);not null;default:''" form:"img_url" json:"img_url"  valid:"Required;MaxSize(500)"`
+	RegTime     int    `json:"reg_time" gorm:"type:int(12);not null;default:0"`
 }
 
 //insert
